force-app/main/default/objects/Project__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Data Missing</fullName>
            </value>
            <value>
                <fullName>Data Structure</fullName>
            </value>
            <value>
                <fullName>Question/Idea</fullName>
            </value>
            <value>
                <fullName>Reporting/Metrics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>