force-app/main/default/objects/Project__c/fields/Enterprise_Department__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Department__c</fullName>
    <label>Enterprise Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Programs Services</fullName>
            </value>
            <value>
                <fullName>Social Enterprise</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Enterprise-Wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>