force-app/main/default/objects/Project__c/fields/External_Deadline__c.field-meta.xml
<CustomField>
    <fullName>External_Deadline__c</fullName>
    <label>External Deadline</label>
    <type>Date</type>
</CustomField>