force-app/main/default/objects/Project__c/fields/External_Deadline_Type__c.field-meta.xml
<CustomField>
    <fullName>External_Deadline_Type__c</fullName>
    <label>External Deadline Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>