force-app/main/default/objects/Project__c/fields/Functions__c.field-meta.xml
<CustomField>
    <fullName>Functions__c</fullName>
    <label>Function(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Cleanslate</fullName>
            </value>
            <value>
                <fullName>Connects</fullName>
            </value>
            <value>
                <fullName>Participant Svs - Supportive Svs</fullName>
            </value>
            <value>
                <fullName>Participant Svs - Recruitment</fullName>
            </value>
            <value>
                <fullName>Participant Svs - Training</fullName>
            </value>
            <value>
                <fullName>Participant Svs - SD Job Search</fullName>
            </value>
            <value>
                <fullName>Participant Svs - Coaching</fullName>
            </value>
            <value>
                <fullName>Participant Svs - Placement</fullName>
            </value>
            <value>
                <fullName>Participant Svs - Advancement</fullName>
            </value>
            <value>
                <fullName>Back Office - Finance</fullName>
            </value>
            <value>
                <fullName>Back Office - Contracts</fullName>
            </value>
            <value>
                <fullName>Back Office - Data &amp; Tech</fullName>
            </value>
            <value>
                <fullName>Back Office - HR</fullName>
            </value>
            <value>
                <fullName>Back Office - Facilities &amp; Ops</fullName>
            </value>
            <value>
                <fullName>Dev - Institutional</fullName>
            </value>
            <value>
                <fullName>Dev - Individual</fullName>
            </value>
            <value>
                <fullName>Dev - Events</fullName>
            </value>
            <value>
                <fullName>Dev - Engagement</fullName>
            </value>
            <value>
                <fullName>Dev - MarComms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>