force-app/main/default/objects/Project__c/fields/Hold_Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hold_Resolution_Notes__c</fullName>
    <label>Hold/Resolution Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>