force-app/main/default/objects/Project__c/fields/Internal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Internal_Deadline__c</fullName>
    <label>Internal Deadline</label>
    <type>Date</type>
</CustomField>