force-app/main/default/objects/Project__c/fields/Internal_Note__c.field-meta.xml
<CustomField>
    <fullName>Internal_Note__c</fullName>
    <inlineHelpText>IT Access Only</inlineHelpText>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>