force-app/main/default/objects/Project__c/fields/Maximum_Cost_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Cost_Estimate__c</fullName>
    <label>Maximum Cost Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>