force-app/main/default/objects/Project__c/fields/Maximum_Time_Estimate_Days__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Time_Estimate_Days__c</fullName>
    <label>Maximum Time Estimate (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>