force-app/main/default/objects/Project__c/fields/Obstacles__c.field-meta.xml
<CustomField>
    <fullName>Obstacles__c</fullName>
    <inlineHelpText>Admin access only</inlineHelpText>
    <label>Obstacles</label>
    <type>TextArea</type>
</CustomField>