force-app/main/default/objects/Project__c/fields/Order_within_Project__c.field-meta.xml
<CustomField>
    <fullName>Order_within_Project__c</fullName>
    <label>Order within Project</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>