force-app/main/default/objects/Project__c/fields/Part_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part of Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Sub-Projects</relationshipLabel>
    <relationshipName>SubProject</relationshipName>
    <type>Lookup</type>
</CustomField>