force-app/main/default/objects/Project__c/fields/Part_of_Project_Enterprise_Department__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Project_Enterprise_Department__c</fullName>
    <formula>text(Part_of_Project__r.Enterprise_Department__c)</formula>
    <label>Part of Project: Enterprise Department</label>
    <type>Text</type>
</CustomField>