force-app/main/default/objects/Project__c/fields/Primary_Staff_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Staff_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Staff Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>