force-app/main/default/objects/Project__c/fields/Primary_Staff_Contact_Department__c.field-meta.xml
<CustomField>
    <fullName>Primary_Staff_Contact_Department__c</fullName>
    <formula>Primary_Staff_Contact__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Staff Contact Department</label>
    <type>Text</type>
</CustomField>