force-app/main/default/objects/Project__c/fields/Steering_Committee_Discussion_Date__c.field-meta.xml
<CustomField>
    <fullName>Steering_Committee_Discussion_Date__c</fullName>
    <label>Steering Committee Discussion Date</label>
    <type>Date</type>
</CustomField>