force-app/main/default/objects/Project__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>IDS</fullName>
            </value>
            <value>
                <fullName>Advancement</fullName>
            </value>
            <value>
                <fullName>Cleanslate</fullName>
            </value>
            <value>
                <fullName>TCP Staffing</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>