force-app/main/default/objects/Project__c/recordTypes/Archived_Primary_Project.recordType-meta.xml
<RecordType>
    <fullName>Archived_Primary_Project</fullName>
    <active>true</active>
    <label>Archived Primary Project</label>
</RecordType>