force-app/main/default/objects/Project__c/recordTypes/Archived_Sub_Project.recordType-meta.xml
<RecordType>
    <fullName>Archived_Sub_Project</fullName>
    <active>true</active>
    <label>Archived Sub-Project</label>
</RecordType>