force-app/main/default/objects/Project__c/recordTypes/Primary_Project.recordType-meta.xml
<RecordType>
    <fullName>Primary_Project</fullName>
    <active>true</active>
    <label>Primary Project</label>
</RecordType>