force-app/main/default/objects/Project__c/recordTypes/Strategic_Plan_FY18_FY20.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Plan_FY18_FY20</fullName>
    <active>true</active>
    <description>Not in use.</description>
    <label>Strategic Plan, FY18-FY20</label>
</RecordType>