force-app/main/default/objects/Project__c/listViews/Archived_Primary_Projects_All.listView-meta.xml
<ListView>
    <fullName>Archived_Primary_Projects_All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Primary_Staff_Contact__c</columns>
    <columns>Primary_Staff_Contact_Department__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Close_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Archived_Primary_Project</value>
    </filters>
    <label>z Archived Primary Projects, All</label>
    <language>en_US</language>
</ListView>